--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react_demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.18.0",
