--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
-    "qs": "^6.7.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
+    "qs": "^6.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-motion": "^0.5.2",
