--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "qs": "^6.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-loadable": "^5.5.0",
     "react-motion": "^0.5.2",
     "react-redux": "^6.0.0",
     "react-refetch": "^2.0.3",
