--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react_demo",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "/",
   "proxy": "http://192.168.0.70:9001",
   "dependencies": {
     "amfe-flexible": "^2.2.1",
