--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qs": "^6.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-helmet": "^5.2.0",
     "react-loadable": "^5.5.0",
     "react-motion": "^0.5.2",
     "react-redux": "^6.0.0",
