--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   ],
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "http-proxy-middleware": "^0.19.1",
     "mockjs": "^1.0.1-beta3",
     "pretender": "^2.1.1",
     "react-app-rewired": "^2.1.1",
