--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-form-utils": "^1.1.2",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3",
     "uuid": "^3.3.2",
     "weui": "^1.1.3",
