--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "jest": {
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
-    } 
+    }
   },
   "version": "0.1.0",
   "private": true,
@@ -55,6 +55,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "babel-core": "^7.0.0-bridge.0",
     "customize-cra": "^0.2.12",
     "enzyme": "^3.9.0",
