增加webpack路径别名vscode跳转识别

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,10 @@
 {
   // 关掉装饰器的错误提示
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "experimentalDecorators": true
   }
 }
