--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "weui.js": "^1.1.4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "set port=8080 && react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
